--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -19,12 +19,12 @@
         <p>グラフから傾向をつかんで日々のフィットネスや食事管理を改善していきましょう。</p>
       </div>
       <div class="content-image">
-        <img src="/top_images/about_5.png">
+        <img src="/top_images/about_5.jpg">
       </div>
     </div>
     <div class="content-wrapper">
       <div class="content-image">
-        <img src="/top_images/about_1.png">
+        <img src="/top_images/about_1.jpg">
       </div>
       <div class="content-text">
         <h3>◆記録できる項目多数◆</h3>
@@ -40,12 +40,12 @@
         <p>理想に近いカラダの人のメニューを参考にするのも良いでしょう。</p>
       </div>
       <div class="content-image">
-        <img src="/top_images/about_2.png">
+        <img src="/top_images/about_2.jpg">
       </div>
     </div>
     <div class="content-wrapper">
       <div class="content-image">
-        <img src="/top_images/about_4.png">
+        <img src="/top_images/about_4.jpg">
       </div>
       <div class="content-text">
         <h3>◆日々の記録を蓄積◆</h3>
@@ -60,7 +60,7 @@
         <p>かっこいいカラダの人や頑張っている人を見つけたら、いいね！を押してエールを送りましょう。</p>
       </div>
       <div class="content-image">
-        <img src="/top_images/about_3.png">
+        <img src="/top_images/about_3.jpg">
       </div>
     </div>
   </div>
