--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,4 +1,150 @@
+/* スマートフォン向けレイアウト =========== */
+@media screen and (max-width: 480px){
+/* top ================================ */
+.top-main {
+  padding: 26vh 0 10vh;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+  color: white;
+  span{
+    background-color: rgba(99, 99, 99, 0.5);
+  }
+  .top-wrapper{
+    margin:0 auto;
+    a{
+      color: white;
+      text-decoration: underline;
+    }
+    .top-message {
+      position: relative;
+    }
+    h2 {
+      font-size: 26px;
+      font-weight: 500;
+      line-height: 1.3;
+      -webkit-font-smoothing: antialiased;
+      margin-bottom: 15px;
+    }
+    h3 {
+      font-size: 18px;
+      font-weight: 400;
+    }
+    .top-about{
+      margin-top: 7vh;
+      margin-bottom: 5vh;
+      a{
+        font-size: 14px;
+        font-weight: 350;
+      }
+    }
+    .top-signup{
+      button{
+        background-color: #3367D6;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        margin: 20px 0;
+        font-size: 18px;
+        padding:10px 40px;
+      }
+    }
+    .top-login{
+      margin-top: 5px;
+      a{
+        font-size: 12px;
+        font-weight: 350;
+      }
+    }
+  }
+}
 
+.contact-content, .terms-content{
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 44vh;
+  color: white;
+  font-size: 20px;
+}
+}
+
+/* タブレット向けレイアウト =========== */
+@media screen and (min-width: 481px) and (max-width: 959px){
+/* top ================================ */
+.top-main {
+  padding: 30vh 0 10vh;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  min-height: 100%;
+  color: white;
+  span{
+    background-color: rgba(99, 99, 99, 0.5);
+  }
+  .top-wrapper{
+    max-width: 900px;
+    margin:0 auto;
+    a{
+      color: white;
+      text-decoration: underline;
+    }
+    .top-message {
+      position: relative;
+    }
+    h2 {
+      font-size: 50px;
+      font-weight: 500;
+      line-height: 1.3;
+      -webkit-font-smoothing: antialiased;
+      margin-bottom: 15px;
+    }
+    h3 {
+      font-size: 25px;
+      font-weight: 400;
+    }
+    .top-about{
+      margin-top: 50px;
+      margin-bottom: 40px;
+      a{
+        font-size: 19px;
+        font-weight: 350;
+      }
+    }
+    .top-signup{
+      button{
+        background-color: #3367D6;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        margin: 20px 0;
+        font-size: 24px;
+        padding:10px 40px;
+      }
+    }
+    .top-login{
+      margin-top: 5px;
+      a{
+        font-size: 16px;
+        font-weight: 350;
+      }
+    }
+  }
+}
+
+.contact-content, .terms-content{
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 264px;
+  padding-bottom: 200px;
+  max-width: 900px;
+  color: white;
+  font-size: 24px;
+}
+}
+
+/* PC向けレイアウト =================== */
+@media screen and (min-width: 960px){
 /* top ================================ */
 .top-main {
   padding: 200px 0 100px;
@@ -60,15 +206,16 @@
   }
 }
 
+.contact-content, .terms-content{
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 264px;
+  padding-bottom: 200px;
+  max-width: 900px;
+  color: white;
+  font-size: 24px;
+}
+}
 
-/* top ================================ */
 
-  .contact-content, .terms-content{
-    margin: 0 auto;
-    text-align: center;
-    padding-top: 264px;
-    padding-bottom: 200px;
-    max-width: 900px;
-    color: white;
-    font-size: 24px;
-  }
+
