--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,43 +1,47 @@
 <div class="posts-show">
   <div class="container">
-    <div class="posts-show-item">
-      <div class="post-user-name">
-        <%= link_to user_path(@post.user) do %>
-        <img class="icon-image" src="<%= "/user_images/#{@post.user.icon_image_name}" %>">
-        <% end %>
-        <%= link_to @post.user.name, user_path(@post.user) %>
+    <div class="background-white">
+      <div class="posts-show-content">
+        <div class="posts-show-item">
+          <div class="post-user-name">
+            <%= link_to user_path(@post.user) do %>
+            <img class="icon-image" src="<%= "/user_images/#{@post.user.icon_image_name}" %>">
+            <% end %>
+            <%= link_to @post.user.name, user_path(@post.user) %>
+          </div>
+          <% if @post.post_image_name != nil %>
+          <div class="post-image-wrapper">
+            <img class="post-image" src="<%= "/post_images/#{@post.post_image_name}" %>">
+          </div>
+          <% end %>
+          <ul>
+            <li>投稿日：<%= @post.recording_date %></li>
+            <li>体重：<%= @post.body_weight %>kg</li>
+            <li>体脂肪率：<%= @post.body_fat_percentage %>%</li>
+            <li>トレーニングメニュー：<%= @post.training_menu %></li>
+            <li>食事メニュー：<%= @post.meal_menu %></li>
+            <li>総摂取カロリー：<%= @post.total_calorie %>kcal</li>
+          </ul>
+          <div class="likes-wrapper">
+            <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
+            <%= link_to "/likes/#{@post.id}/destroy", method: "post" do %>
+            <i class="fas fa-heart like-btn-unlike"></i>
+            <% end %>
+            <% else %>
+            <%= link_to "/likes/#{@post.id}/create", method: "post" do %>
+            <i class="fas fa-heart like-btn"></i>
+            <% end %>
+            <% end %>
+            <%= @likes_count %>
+            <% if @current_user.id == @post.user.id %>
+          </div>
+          <div class="post-menus">
+            <%= link_to "編集", edit_post_path(@post) %>
+            <%= link_to "削除", post_path(@post), method: "delete" %>
+          </div>
+          <% end %>
+        </div>
       </div>
-      <% if @post.post_image_name != nil %>
-      <div class="post-image-wrapper">
-        <img class="post-image" src="<%= "/post_images/#{@post.post_image_name}" %>">
-      </div>
-      <% end %>
-      <ul>
-        <li>投稿日：<%= @post.recording_date %></li>
-        <li>体重：<%= @post.body_weight %>kg</li>
-        <li>体脂肪率：<%= @post.body_fat_percentage %>%</li>
-        <li>トレーニングメニュー：<%= @post.training_menu %></li>
-        <li>食事メニュー：<%= @post.meal_menu %></li>
-        <li>総摂取カロリー：<%= @post.total_calorie %>kcal</li>
-      </ul>
-      <div class="likes-wrapper">
-      <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
-      <%= link_to "/likes/#{@post.id}/destroy", method: "post" do %>
-      <i class="fas fa-heart like-btn-unlike"></i>
-      <% end %>
-      <% else %>
-      <%= link_to "/likes/#{@post.id}/create", method: "post" do %>
-      <i class="fas fa-heart like-btn"></i>
-      <% end %>
-      <% end %>
-      <%= @likes_count %>
-      <% if @current_user.id == @post.user.id %>
-      </div>
-      <div class="post-menus">
-        <%= link_to "編集", edit_post_path(@post) %>
-        <%= link_to "削除", post_path(@post), method: "delete" %>
-      </div>
-      <% end %>
     </div>
   </div>
 </div>
