--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -1,4 +1,40 @@
 
+/* スマートフォン向けレイアウト =========== */
+@media screen and (max-width: 480px){
+/* flash ================================ */
+.flash {
+  padding: 2vh 0;
+  color: white;
+  background: #B1F05C;
+  text-align: center;
+  position: absolute;
+  top: 7vh;
+  z-index: 10;
+  width: 100%;
+  border-radius: 0 0 2px 2px;
+  font-size: 13px;
+}
+}
+
+/* タブレット向けレイアウト =========== */
+@media screen and (min-width: 481px) and (max-width: 959px){
+  /* flash ================================ */
+  .flash {
+    padding: 10px 0;
+    color: white;
+    background: #B1F05C;
+    text-align: center;
+    position: absolute;
+    top: 64px;
+    z-index: 10;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+    font-size: 14px;
+  }
+}
+
+/* PC向けレイアウト =========== */
+@media screen and (min-width: 960px){
 /* flash ================================ */
 .flash {
   padding: 10px 0;
@@ -11,4 +47,5 @@
   width: 100%;
   border-radius: 0 0 2px 2px;
   font-size: 14px;
+}
 }
