--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2,7 +2,7 @@
 @media screen and (max-width: 480px){
 /* 共通===================================================== */
   body {
-    background-image: url('/top_images/gym_1.jpg');
+    background-image: url('/top_images/gym_2_phone.jpg');
     background-color:rgba(255,255,255,0.35);
     background-blend-mode:lighten;
     background-attachment: fixed;
