--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -7,7 +7,8 @@
   color: white;
   background: #B1F05C;
   text-align: center;
-  position: absolute;
+  // position: absolute;
+  position: fixed;
   top: 7vh;
   z-index: 10;
   width: 100%;
@@ -24,7 +25,7 @@
     color: white;
     background: #B1F05C;
     text-align: center;
-    position: absolute;
+    position: fixed;
     top: 64px;
     z-index: 10;
     width: 100%;
