--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,7 +5,7 @@
   padding-top: 6vh;
   .posts-index-content{
     display: inline-block;
-    width: 83vw;
+    width: 80vw;
     .posts-heading{
       text-align: center;
       font-weight: 300;
@@ -82,80 +82,83 @@
 }
 
 /* posts/show ================================ */
-  
-  .posts-show{
-    padding-top: 6vh;
-  .posts-show-item {
-    padding: 2vh;
-    background-color: white;
-    box-shadow: 0 2px 6px #c1ced7;
-  overflow: hidden;
-  .icon-image {
-    width: 16vw;
-    height: 16vw;
-    border-radius: 40%;
-    box-shadow: 0 2px 6px #c1ced7;
-    vertical-align: middle;
-  }
-  .post-user-name {
-    text-align: left;
-    padding-bottom: 2vh;
-    a {
-      vertical-align: middle;
-      font-size: 15px;
-      margin-left: 15px;
+
+.posts-show{
+  padding-top: 6vh;
+  .posts-show-content{
+    width: 80vw;
+    .posts-show-item {
+      padding: 2vh;
+      background-color: white;
+      box-shadow: 0 2px 6px #c1ced7;
+      overflow: hidden;
+      .icon-image {
+        width: 16vw;
+        height: 16vw;
+        border-radius: 40%;
+        box-shadow: 0 2px 6px #c1ced7;
+        vertical-align: middle;
+      }
+      .post-user-name {
+        text-align: left;
+        padding-bottom: 2vh;
+        a {
+          vertical-align: middle;
+          font-size: 15px;
+          margin-left: 15px;
+        }
+      }
+      ul{
+        padding-bottom: 2vh;
+        text-align: left;
+        li{
+          font-size: 14px;
+        }
+      }
+      p {
+        font-size: 15px;
+        margin: 20px 0;
+      }
+      .fa {
+        font-size: 14px;
+        margin-right: 3px;
+      }
+      .post-image-wrapper {
+        text-align: center;
+        width: 100%;
+        padding-bottom: 2vh;
+        .post-image {
+          width: 65%;
+        }
+      }
+      .post-menus {
+        float: right;
+        a {
+          color: #8899a6;
+          text-decoration: underline;
+          font-size: 12px;
+          padding-left: 2vw;
+        }
+      }
+      .likes-wrapper{
+        text-align: left;
+        margin-top: 5px;
+      }
     }
-  }
-  ul{
-    padding-bottom: 2vh;
-    text-align: left;
-    li{
-      font-size: 14px;
-    }
-  }
-  p {
-    font-size: 15px;
-    margin: 20px 0;
-  }
-  .fa {
-    font-size: 14px;
-    margin-right: 3px;
-  }
-  .post-image-wrapper {
-    text-align: center;
-    width: 100%;
-    padding-bottom: 2vh;
-    .post-image {
-      width: 65%;
-    }
-  }
-  .post-menus {
-    float: right;
-    a {
+    
+    .post-time {
       color: #8899a6;
-      text-decoration: underline;
-      font-size: 12px;
-      padding-left: 2vw;
+      margin-bottom: 10px;
+    }
+    
+    .like-btn, .like-btn-unlike{
+      font-size: 23px;
+    }
+    
+    .like-btn {
+      color: #8899a6;
     }
   }
-  .likes-wrapper{
-    text-align: left;
-    margin-top: 5px;
-  }
-}
-
-.post-time {
-  color: #8899a6;
-  margin-bottom: 10px;
-}
-
-.like-btn, .like-btn-unlike{
-  font-size: 23px;
-}
-
-.like-btn {
-  color: #8899a6;
-}
 
 .like-btn-unlike {
   color: #ff2581;
