--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -7,7 +7,6 @@
   color: white;
   background: #B1F05C;
   text-align: center;
-  // position: absolute;
   position: fixed;
   top: 7vh;
   z-index: 10;
@@ -42,7 +41,7 @@
   color: white;
   background: #B1F05C;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 64px;
   z-index: 10;
   width: 100%;
