--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -216,7 +216,6 @@
             height: 50px;
             border-radius: 40%;
             box-shadow: 0 2px 6px #c1ced7;
-            // object-fit: cover;
           }  
         }  
         .post-center {
@@ -377,11 +376,10 @@
         .post-left {
           width: 10%;
           img {
-            // width: 10vw;
-            // height: 10vw;
+            width: 50px;
+            height: 50px;
             border-radius: 40%;
             box-shadow: 0 2px 6px #c1ced7;
-            // object-fit: cover;
           }  
         }  
         .post-center {
